--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -19,8 +19,8 @@ env = build.env
 f = open("build.h","w")
 version = util.get_bzr_branch_name()
 try:
-        # If this is not a release branch use its name as the version number.
-    if version.find("release") == -1: # Crappy way to detect release branch.
+    # If this is not a release branch use its name as the version number.
+    if version.find("release") == -1 and version.find("1.") != 0: # Crappy way to detect release branch.
         f.write('#define VERSION "' + version + '"\n')
     f.write('#define BUILD_REV "' + util.get_bzr_revision() + '"\n')
 finally:
