Committed Alessio Treglia's fix to get Mixxx to build on Debian Alpha

--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -769,7 +769,8 @@ if platformString in ('linux', 'bsd'):
 
 #declare platform specific flags? though we shouldn't really need these, the compilers should Just Know...
 #on __APPLE__ it works like that. probably we just need to look into what the default __platform__ #defines are and search and replace in the code
-env.Append(CPPDEFINES=machine)
+if not machine == 'alpha':
+   env.Append(CPPDEFINES=machine)
 
 if platformString == 'linux':
 	env.Append(CPPDEFINES='__LINUX__')
