--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -145,20 +145,21 @@ image_files = Glob('#res/images/preferences/*')  # These are compiled in to the 
 # TODO: Use reference to SharedLibrary for libsndfile and others, glob only gets
 # all files on 2+ builds after a clean.
 if build.toolchain_is_msvs:
-        dll_files = Glob('#/../mixxx-win%slib-msvc/[!"msvc"]*.dll' % build.bitwidth)
+        dll_files = Glob('#/../../mixxx-win%slib-msvc100/*.dll' % build.bitwidth)
 elif build.crosscompile and build.platform_is_windows and build.toolchain_is_gnu:
         # We're cross-compiling, grab these from the crosscompile bin folder. How should we be doing this?
-        dll_files = Glob('#/../mixxx-win%slib-crossmingw' % build.bitwidth)
+        dll_files = Glob('#/../../mixxx-win%slib-crossmingw' % build.bitwidth)
 elif build.crosscompile and build.platform_is_osx:
         # Glob appropriate dylib files. We have 4 different library types,
         # x86_64, x86, powerpc, powerpc64
-        dylib_files = Glob('#/../mixxx-osx-%s-crossmingw' % build.machine)
+        dylib_files = Glob('#/../../mixxx-osx-%s-crossmingw' % build.machine)
 else:
         dll_files = list() # dll_files += on the next line required dll_files to exist
 
 # dll_files = libsndfile
 dll_files += Split("""$QTDIR/bin/QtCore4.dll $QTDIR/bin/QtGui4.dll $QTDIR/bin/QtNetwork4.dll $QTDIR/bin/QtOpenGL4.dll $QTDIR/bin/QtSql4.dll $QTDIR/bin/QtXml4.dll $QTDIR/bin/QtXmlPatterns4.dll $QTDIR/bin/QtSql4.dll $QTDIR/bin/QtSvg4.dll $QTDIR/bin/QtWebKit4.dll
 $QTDIR/bin/phonon4.dll""")
+sqldll_files = Split("""$QTDIR/plugins/sqldrivers/qsqlite4.dll""") #Qt SQLite plugin
 
 if int(flags['script']) or int(flags['midiscript']):
 	dll_files += Split("""$QTDIR/bin/QtScript4.dll""")
@@ -271,6 +272,7 @@ if build.platform_is_windows:
 	promotracks = env.Install("#"+dist_dir+"/promo/", promotracks_files)
 	#icon = env.Install("#"+dist_dir+"", icon_files)
 	dlls = env.Install("#"+dist_dir+"/", dll_files)
+	sql_dlls = env.Install("#"+dist_dir+"/sqldrivers", sqldll_files)
 	soundsource_plugins = env.Install("#"+dist_dir+"/plugins/soundsource/", soundsource_plugin_files)
 	binary = env.Install("#"+dist_dir+"/", binary_files)
 
@@ -284,6 +286,7 @@ if build.platform_is_windows:
 	env.Alias('mixxx', promotracks)
 	env.Alias('mixxx', docs)
 	env.Alias('mixxx', dlls)
+	env.Alias('mixxx', sql_dlls)
 	env.Alias('mixxx', soundsource_plugins)
 	#env.Alias('mixxx', icon)
 	env.Alias('mixxx', binary)
