* Drop the version number from the NSIS installer output filename so we can build any branch without parsing version strings and stuff like that. * The makerelease SCons target is non-interactive now. Automatic win32 builds work for me now...

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -344,7 +344,8 @@ def BuildRelease(target, source, env):
     else:
         os.system('head -n 2 LICENSE')
 
-    if (raw_input("Go ahead and build installer (yes/[no])? ") == "yes"):
+    #if (raw_input("Go ahead and build installer (yes/[no])? ") == "yes"):
+    if (True):
         print "\nNow building installer..."
         buildwin64 = ""
         command_flag = None
