* Set Apple's recommended ~/Library/Application Support/Mixxx path for settings stuff on OS X. * We forgot the -msse and -msse2 flags for our Core 2 optimizations. * Compile with -arch flags on OS X (recommended instead of -m) * Massive re-indent on OSConsX.py (sorry) * Added IDENTIFIER, DISPLAY_NAME, SHORT_VERSION, COPYRIGHT, and CATEGORY to OSConsX bundle target. (Inserts fields into Info.plist.) * CFBundleDisplayName field in Info.plist fixes uncapitalised "mixxx" in OS X menu bar. * Added upgrade.cpp path for migrating OS X ~/.mixxx files to the new settings path, including subdirectories (which Qt doesn't help you with).

--- a/mixxx/src/SConscript
+++ b/mixxx/src/SConscript
@@ -253,7 +253,12 @@ if build.platform_is_osx and 'bundle' in COMMAND_LINE_TARGETS:
 		 QT_HACK = [(p_tgt_dir, os.path.join("/Developer/Applications/Qt/plugins/", p_tgt_dir, p)) for p_tgt_dir, p in qt_plugins] #sigh :(
 		 ,
 		 STRIP=True,
-		 #STRIP=(type == 'RELEASE')
+		 #STRIP=(type == 'RELEASE'),
+         IDENTIFIER="org.mixxx.mixxx",
+         DISPLAY_NAME="Mixxx",
+         SHORT_VERSION="1.9.0", #FIXME: parse defs_version.h???
+         COPYRIGHT="Copyright © 2011 Mixxx Development Team", #FIXME: datetime.year()
+         CATEGORY="public.app-category.music"
 		 )
 	#env.Default(mixxx_bin) #todo: make the Default() just the program itself *globally* (not just for OS X); bundle should be a separate target
 	env.Alias('bundle', bundle)
