--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -20,7 +20,7 @@ f = open("build.h","w")
 version = util.get_bzr_branch_name()
 try:
     # If this is not a release branch use its name as the version number.
-    if version.find("release") == -1 and version.find("1.") != 0: # Crappy way to detect release branch.
+    if not version.startswith('release'):
         f.write('#define VERSION "' + version + '"\n')
     f.write('#define BUILD_REV "' + util.get_bzr_revision() + '"\n')
 finally:
@@ -142,22 +142,22 @@ if 'msvc' in COMMAND_LINE_TARGETS:
     cppfiles = []
     hfiles = []
     # XXX: Assumes we're in the "src" directory!
-    for root, dirs, filenames in os.walk('.'): 
-        #for exclusion in ['.bzr', '.svn']: 
-        #    if exclusion in dirs: 
-        #        dirs.remove(exclusion)     
+    for root, dirs, filenames in os.walk('.'):
+        #for exclusion in ['.bzr', '.svn']:
+        #    if exclusion in dirs:
+        #        dirs.remove(exclusion)
         #print filenames
-        for file in filenames: 
+        for file in filenames:
             #print file
             filepath = os.path.join(root, file)
             if filepath.startswith(".\\"):
                 filepath = filepath[2:]
 
             #print filepath
-            if fnmatch.fnmatch(filepath, '*.cpp'): 
-                cppfiles.append(filepath) 
-            elif fnmatch.fnmatch(filepath, '*.h'): 
-                hfiles.append(filepath) 
+            if fnmatch.fnmatch(filepath, '*.cpp'):
+                cppfiles.append(filepath)
+            elif fnmatch.fnmatch(filepath, '*.h'):
+                hfiles.append(filepath)
 
     msvc = env.MSVSProject(target = 'mixxx' + env['MSVSPROJECTSUFFIX'], srcs = cppfiles, incs = hfiles, variant = 'Debug', runfile = '../dist' + str(build.bitwidth) + '/mixxx.exe')
 
